@@ -1,6 +1,7 @@
 package com.khaleo.flashcard.config.security;
 
 import com.khaleo.flashcard.service.auth.JwtTokenService;
+import com.khaleo.flashcard.repository.UserRepository;
 import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.Jws;
 import jakarta.servlet.FilterChain;
@@ -8,10 +9,13 @@ import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import java.io.IOException;
-import java.util.Collections;
+import java.time.Instant;
+import java.util.List;
+import java.util.UUID;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
@@ -24,6 +28,7 @@ import org.springframework.web.filter.OncePerRequestFilter;
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
     private final JwtTokenService jwtTokenService;
+    private final UserRepository userRepository;
 
     @Override
     protected void doFilterInternal(
@@ -43,8 +48,29 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
             String subject = claims.getPayload().getSubject();
 
             if (subject != null && SecurityContextHolder.getContext().getAuthentication() == null) {
+                UUID userId = UUID.fromString(subject);
+                var user = userRepository.findById(userId).orElse(null);
+                if (user == null) {
+                    filterChain.doFilter(request, response);
+                    return;
+                }
+
+                if (user.getBannedAt() != null && user.getBannedAt().isBefore(Instant.now().plusSeconds(1))) {
+                    log.info("event=auth_banned_request_denied userId={} path={}", subject, request.getRequestURI());
+                    response.setStatus(HttpServletResponse.SC_FORBIDDEN);
+                    response.setContentType("application/json");
+                    response.getWriter().write(
+                            "{\"timestamp\":\"" + Instant.now() +
+                                    "\",\"status\":403,\"error\":\"BANNED_USER_REQUEST_DENIED\",\"message\":\"Banned account access denied.\",\"path\":\""
+                                    + request.getRequestURI() + "\"}");
+                    return;
+                }
+
                 UsernamePasswordAuthenticationToken authentication =
-                        new UsernamePasswordAuthenticationToken(subject, null, Collections.emptyList());
+                        new UsernamePasswordAuthenticationToken(
+                                subject,
+                                null,
+                                List.of(new SimpleGrantedAuthority(user.getRole().name())));
                 authentication.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
                 SecurityContextHolder.getContext().setAuthentication(authentication);
             }
